# oreo

./: .env.local  .gitignore  BREADBOARD_BOM.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEARN.md  LICENSE  OTOD.MD  README.md  SECURITY.md  SUPPORT.md  TODO.md  config.py  plan_os_update.txt  purchase_bread_todo.md  pyproject.toml  requirements.txt  run_sim.py
.claude/token-efficiency/: skill.md
.github/: ci_config.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: app_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/ccr-adapters/: openai-normalize.js
.github/scripts/: pr_fill_description.py  update_readme.py
.github/workflows/: biome.yml  codeql.yml  issue-auto-fix.yml  pr-review-request.yml  pr-triage.yml  release.yml  sync-icons-to-assets.yml
LICENSES/: NOTICE  README.md
LICENSES/exceptions/: Oreo-trademarks
LICENSES/notices/: notice-board
LICENSES/preferred/: Apache-2.0
app_templates/: README.md  main.py  manifest.json
app_templates/example_app_first/: README.md  main.py  manifest.json
app_templates/src/: app.py
apps/about/: main.py  manifest.json
assets/: mascot.py
docs/: BADGE_LAYOUT.md  BREADBOARD_BOM.md  DATASHEET.md  HARDWARE.md  README.md  buttons.md  lcd.md
entry/: badgr.py
lix/: __init__.py  api.py  font.py  pixelfont.py  sprite.py
lix_hw/: __init__.py  _st7789.py  battery.py  bt.py  buttons.py  display.py  os.py  pins.py  wifi.py
lix_os/: __init__.py  home.py  icons.py  launcher.py  panda.py  splash.py  theme.py  timeutil.py  widgets.py
lix_sim/: __init__.py  buttons.py  display.py  font8x8.py  os.py
oreo.elixpo/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  theme.js  tsconfig.json  wrangler.toml
oreoOS/: __init__.py  _http.py  api.py  app.py  bonds.py  cache.py  config.py  entry.py  font.py  gestures.py  home.py  http_server.py  icons.py  launcher.py  notif_panel.py  notifications.py  ota.py  pair_prompt.py  pixelfont.py  power.py  requirements.txt  splash.py  sprite.py  storage.py  store.py  theme.py  timeutil.py  touch.py  widgets.py
oreoWare/: __init__.py  _st7789.py  battery.py  bt.py  buttons.py  display.py  imu.py  ir.py  os.py  pins.py  wifi.py
pcb/: BOM.md  README.md
prompts/: README.md  about_icon.md  apps_icon.md  bluetooth_icon.md  commits_icon.md  elixpo_pet_icon.md  flappy_panda_down.md  gallery_icon.md  gamepad_icon.md  home_bg.md  oreoos_banner.md  settings_icon.md  site_assets.md
tools/: _gen_banner.py  _gen_color_splash.py  _gen_splash.py  bt_send.py  build_color_splash.py  build_release.py  compile_sticker_sheet.py  compose_sheet.py  convert_asset.py  deploy.py  fetch_avatar.py  flash_uart_repl.py  gen_icons.py  generate_assets.py  imu_probe.py  optimize_assets.py  rasterise_font.py  release.py  sticker_transparency.py  transparent.py
(+255 files in other folders)
